Actions
Bug #12531
closedstorage: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../common/mon.c: In function 'l_get_box_list': ../common/mon.c:1564: error: comparison between pointer and integer ../common/mon.c:1609: error: assignment makes integer from pointer without a cast ../common/mon.c: In function 'load_flds_if_enc_disk': ../common/mon.c:1810: error: comparison between pointer and integer ../common/mon.c: In function 'l_convert_name': ../common/mon.c:2076: error: assignment makes integer from pointer without a cast ../common/mon.c: In function 'l_get_envsen': ../common/mon.c:2401: error: comparison between pointer and integer ../common/mon.c:2450: error: comparison between pointer and integer ../common/mon.c: In function 'l_get_disk_status': ../common/mon.c:2503: error: assignment makes integer from pointer without a cast ../common/mon.c: In function 'l_persistent_check': ../common/mon.c:2702: error: comparison between pointer and integer ../common/mon.c: In function 'l_get_individual_state': ../common/mon.c:3720: error: assignment makes integer from pointer without a cast ../common/mon.c:3745: error: assignment makes integer from pointer without a cast ../common/lhot.c: In function 'l_chk_null_wwn': ../common/lhot.c:321: error: assignment makes integer from pointer without a cast ../common/lhot.c:335: error: assignment makes integer from pointer without a cast ../common/lhot.c: In function 'l_get_drive_name': ../common/lhot.c:888: error: comparison between pointer and integer ../common/lhot.c:898: error: comparison between pointer and integer ../common/io.c: In function 'g_scsi_tur': ../common/io.c:685: error: assignment makes integer from pointer without a cast ../common/io.c: In function 'g_scsi_reset': ../common/io.c:709: error: assignment makes integer from pointer without a cast ../common/io.c:711: error: assignment makes integer from pointer without a cast ../common/mpath.c: In function 'get_pathlist': ../common/mpath.c:245: error: comparison between pointer and integer ../common/mpath.c:250: error: comparison between pointer and integer ../common/mpath.c:268: error: assignment makes integer from pointer without a cast ../common/map.c: In function 'get_multipath': ../common/map.c:4455: error: assignment makes integer from pointer without a cast ../common/map.c:4474: error: comparison between pointer and integer
Testing done: build/install/boot cycle.
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 926d645fe2416b8ee611fc8ee4e28b7c7f9744dd
commit 926d645fe2416b8ee611fc8ee4e28b7c7f9744dd Author: Toomas Soome <tsoome@me.com> Date: 2020-06-12T15:08:36.000Z 12531 storage: NULL pointer errors Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions